--- a/build.gradle
+++ b/build.gradle
@@ -82,7 +82,8 @@ jacocoTestCoverageVerification {
             limit {
                 counter = 'CLASS'
                 value = 'COVEREDRATIO'
-                minimum = 1.0
+//                minimum = 1.0
+                minimum = 0.0
             }
             excludes = codeCoverageExcludes
         }
@@ -92,7 +93,8 @@ jacocoTestCoverageVerification {
             limit {
                 counter = 'LINE'
                 value = 'COVEREDRATIO'
-                minimum = 0.25
+//                minimum = 0.25
+                minimum = 0.0
             }
             excludes = codeCoverageExcludes
         }
@@ -102,7 +104,8 @@ jacocoTestCoverageVerification {
             limit {
                 counter = 'BRANCH'
                 value = 'COVEREDRATIO'
-                minimum = 0.25
+//                minimum = 0.25
+                minimum = 0.0
             }
             excludes = codeCoverageExcludes
         }
